Add alts to images

--- a/index.html
+++ b/index.html
@@ -865,7 +865,6 @@
     @media (min-width: 1250px) {
       #es-sodastream.es-sodastream .es-kv {
         background-color: #ebe6e1;
-        /* background-image: url(./img/kv-bg.png); */
         position: relative;
         background-position: 0% 20%;
         background-repeat: no-repeat;
@@ -1083,7 +1082,6 @@
     @media (min-width: 1250px) {
       #es-sodastream.es-sodastream .es-kv {
         background-color: #ebe6e1;
-        /* background-image: url(./img/kv-bg.png); */
         background-repeat: no-repeat;
         padding: 20px;
         margin-bottom: 0;
@@ -1310,7 +1308,7 @@
     <div class="es-kv__container">
       <div class="es-kv__img">
         <img class="es-kv__packshot" src="./img/kv-packshot.png"
-             alt="SodaStream Syrop Kwiat Czarnego Bzu, 440 ml" loading="lazy">
+             alt="Butelka syropu Sodastream o smaku Kwiatu Czarnego Bzu" loading="lazy">
       </div>
     </div>
     <div class="es-kv__content">
@@ -1349,7 +1347,7 @@
       tworząc wyjątkowe połączenie, które zachwyci zarówno Ciebie, jak i
       Twoich gości.
     </p>
-    <img class="es-efficiency__img" src="./img/img-eff.png" alt=""
+    <img class="es-efficiency__img" src="./img/img-eff.png" alt="Biały saturator Sodastream Art, butelka syropu o smaku Kwiatu Czarnego Bzu oraz szklanka z gotowym napojem na kuchennym blacie."
          loading="lazy">
   </div>
   <div class="es-steps">
@@ -1361,11 +1359,11 @@
       </div>
       <div class="es-steps__single">
         <img class="es-steps__img es-steps__img--2" src="./img/step-2.png"
-             alt="" loading="lazy">
+             alt="Krok 2 - Ulubiony syrop do wody gazowanej" loading="lazy">
         <p class="es-steps__title es-steps__title--2">miksuj</p>
       </div>
       <div class="es-steps__single">
-        <img class="es-steps__img" src="./img/step-3.png" alt=""
+        <img class="es-steps__img" src="./img/step-3.png" alt="Krok 3 - Ciesz się smakiem pysznych napojów"
              loading="lazy">
         <p class="es-steps__title">smakuj</p>
       </div>
@@ -1402,7 +1400,7 @@
         <div class="es-bez__wrapper-desktop-sodastream-container-text">
           <p class="es-bez__wrapper-desktop-sodastream-container-text--big">cynk</p>
         </div>
-        <img src="./img/bez-desktop.png" alt="" loading="lazy" class="es-bez__wrapper-desktop-sodastream-container-img">
+        <img src="./img/bez-desktop.png" alt="Butelka syropu Sodastream Kwiat Czarnego Bzu, którego skład wzbogacono o witaminy i mikroelementy." loading="lazy" class="es-bez__wrapper-desktop-sodastream-container-img">
       </div>
 
       <div class="es-bez__wrapper-desktop-text-container-right">
@@ -1417,7 +1415,7 @@
     <div class="es-bez__wrapper-mobile">
       <div class="es-bez__wrapper-mobile-sodastream-container">
         <div class="es-bez__wrapper-mobile-sodastream-container-image-wrapper">
-          <img src="./img/bez-mobile.png" alt="" loading="lazy" class="es-bez__wrapper-mobile-sodastream-container-img">
+          <img src="./img/bez-mobile.png" alt="Butelka syropu Sodastream Kwiat Czarnego Bzu, wzbogaconego witaminami i mikroelementami." loading="lazy" class="es-bez__wrapper-mobile-sodastream-container-img">
         </div>
         <div class="es-bez__wrapper-mobile-sodastream-container-text-wrapper">
           <div class="es-bez__wrapper-mobile-sodastream-container-text">
@@ -1480,7 +1478,7 @@
                     <div class="es-slider__single">
                       <p class="es-slider__number">1</p>
                       <div class="es-slider__icon">
-                        <img src="./img/icon-4.png" alt="" loading="lazy">
+                        <img src="./img/icon-4.png" alt="" aria-hidden="true" loading="lazy">
                       </div>
                       <p class="es-slider__desc">
                         <span>Wlej zimną wodę.</span>
@@ -1490,7 +1488,7 @@
                     <div class="es-slider__single">
                       <p class="es-slider__number">2</p>
                       <div class="es-slider__icon">
-                        <img src="./img/icon-5.png" alt="" loading="lazy">
+                        <img src="./img/icon-5.png" alt="" aria-hidden="true" loading="lazy">
                       </div>
                       <p class="es-slider__desc">
                           <span>
@@ -1503,7 +1501,7 @@
                     <div class="es-slider__single">
                       <p class="es-slider__number">3</p>
                       <div class="es-slider__icon">
-                        <img src="./img/icon-6.png" alt="" loading="lazy">
+                        <img src="./img/icon-6.png" alt="" aria-hidden="true" loading="lazy">
                       </div>
                       <p class="es-slider__desc">
                         <span>Dodaj syrop.</span>
@@ -1513,7 +1511,7 @@
                     <div class="es-slider__single">
                       <p class="es-slider__number">4</p>
                       <div class="es-slider__icon">
-                        <img src="./img/icon-7.png" alt="" loading="lazy">
+                        <img src="./img/icon-7.png" alt="" aria-hidden="true" loading="lazy">
                       </div>
                       <p class="es-slider__desc">
                           <span>
@@ -1538,7 +1536,7 @@
   </div>
 
   <div class="es-set">
-    <img class="es-set__img" src="./img/set-img.png" alt="" loading="lazy">
+    <img class="es-set__img" src="./img/set-img.png" alt="Szklanka z napojem o smaku Kwiatu Czarnego Bzu" loading="lazy">
     <p class="es-set__desc">
       Odkryj niezwykłe możliwości syropu SodaStream o smaku Kwiatu Czarnego
       Bzu i stwórz wyjątkowe napoje dla siebie i swoich bliskich. Wypróbuj
@@ -1575,7 +1573,7 @@
       innych.
     </p>
     <div class="es-syroups__imgCtn">
-      <img class="es-syroups__pack" src="./img/sodastream-syroups.png" alt=""
+      <img class="es-syroups__pack" src="./img/sodastream-syroups.png" alt="Pełna gama syropów Sodastream, między innymi Pepsi, Lipton Ice Tea, Mountain Dew i różnorodne smaki owocowe."
            loading="lazy">
     </div>
   </div>
@@ -1587,7 +1585,7 @@
             allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     <p class="es-video__hash">#PushForBetter</p>
-    <img class="es-video__logo" src="./img/sodastream-logo.png" alt=""
+    <img class="es-video__logo" src="./img/sodastream-logo.png" alt="Sodastream"
          loading="lazy">
   </div>
 </div>
